fix: Make non-full-width pages more readable
Trying to read longer-form text at full-width is challenging.

--- a/site/web/app/themes/abundanthousingma/resources/assets/styles/layouts/_pages.scss
+++ b/site/web/app/themes/abundanthousingma/resources/assets/styles/layouts/_pages.scss
@@ -285,3 +285,16 @@
     }
   }
 }
+
+.page-template-default,
+.blog,
+.search {
+  .main {
+    margin: auto;
+    max-width: 90vw;
+
+    @media only screen and (min-width: $viewport-breakpoint-large) {
+      max-width: $max-width-content * 0.75;
+    }
+  }
+}
